@@ -89,6 +89,11 @@ There two maven projects. One is `iSkipper` (pom.xml [here](https://github.com/c
 
 3. If you want export a single executable JAR, use `clean compile assembly:single`
 
+4. (Optional) To delivery a ready-to-use package, use `jlink` to generated our customize Java Runtime Enviroment(JRE):
+```shell
+jlink --no-man-pages --add-modules  java.base,java.datatransfer,java.desktop,java.prefs,java.scripting,java.xml,jdk.jsobject,jdk.unsupported,jdk.unsupported.desktop,jdk.xml.dom --compress=2 --output iSkipper-JRE
+```
+
 See Also
 ---------
 The original iSkipper repository: [wizard97/iSkipper](https://github.com/wizard97/iSkipper).
